--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-dsfd
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Koopman Submission</title>
+  <link rel="stylesheet" href="styles.css"/>
+  <script defer src="script.js"></script>
+</head>
+<body>
+  <header>
+    <h2>Real-Time Linear MPC for Quadrotors on SE(3): An Analytical
+	Koopman-based Realization</h2>
+    <p>Supplementary Materials: Videos</p>
+  </header>
+
+  <main>
+  
+  
+     <section>
+      <h2>Task Descriptions</h2>
+      <p>All flights share these tasks: <b>Task 1</b>: Follow a vertical line and hover, 
+        <b>Task 2</b>: Follow a Lemniscate, 
+        <b>Task 3</b>: Follow a vertical helix.
+      </p>
+    </section>
+    
+    <section>
+      <h2>KQ‑LMPC Flights</h2>
+      <div id="gallery-kq" class="gallery"></div>
+    </section>
+
+    <section>
+      <h2>NMPC Flights</h2>
+      <div id="gallery-nmpc" class="gallery"></div>
+    </section>
+  </main>
+</body>
+</html>
+
