--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 </head>
 <body>
   <header>
-    <h2>Real-Time Linear MPC for Quadrotors on SE(3): An Analytical
-	Koopman-based Realization</h2>
+    <h2>Real-Time Linear MPC for Quadrotors on SE(3): An Analytical Koopman-based Realization</h2>
     <p>Supplementary Materials: Videos</p>
   </header>
 
   <main>
-  
-  
-     <section>
+    <section>
       <h2>Task Descriptions</h2>
       <p>All flights share these tasks: <b>Task 1</b>: Follow a vertical line and hover, 
         <b>Task 2</b>: Follow a Lemniscate, 
@@ -27,15 +24,9 @@
     </section>
     
     <section>
-      <h2>KQ‑LMPC Flights</h2>
-      <div id="gallery-kq" class="gallery"></div>
-    </section>
-
-    <section>
-      <h2>NMPC Flights</h2>
-      <div id="gallery-nmpc" class="gallery"></div>
+      <h2>Video Comparison: KQ‑LMPC vs NMPC</h2>
+      <div id="comparison-gallery" class="comparison-gallery"></div>
     </section>
   </main>
 </body>
 </html>
-
