--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
   <header>
     <h2>Real-Time Linear MPC for Quadrotors on SE(3): An Analytical Koopman-based Realization</h2>
-    <p>Supplementary Materials: Videos</p>
+    <p>Supplementary Materials</p>
   </header>
 
-  <main>
+  <!-- <main>
     <section>
       <h2>Task Descriptions</h2>
       <p>All flights share these tasks: <b>Task 1</b>: Follow a vertical line and hover, 
         <b>Task 2</b>: Follow a Lemniscate, 
         <b>Task 3</b>: Follow a vertical helix.
       </p>
-    </section>
+    </section> -->
     
     <section>
       <h2>Video Comparison: KQ‑LMPC vs NMPC</h2>
