--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
         <b>Task 2</b>: Follow a Lemniscate, 
         <b>Task 3</b>: Follow a vertical helix.
       </p>
-    </section> --> -->
+    </section> -->
     
     <section>
       <h2>Video Comparison: KQ‑LMPC vs NMPC</h2>
       <div id="comparison-gallery" class="comparison-gallery"></div>
+    </section>
+
+    <!-- New standalone video section -->
+    <section>
+      <h2>Gazebo Simulation of the Torus Knot with KQ-LMPC (considerably agile)</h2>
+      <div id="standalone-video" class="standalone-video"></div>
     </section>
   </main>
 </body>
